# especializacao-ia

./: README.md  llm-01.py  pyproject.toml  rag-qdrant.py  rag.py
fundamentos/: tokenization-01.py  tokenization-02.py  tokenization-03.py  tokenization-04.py
index_dir/: MAIN_zbilg4umnwtk1utu.seg  _MAIN_1.toc
