[project]
name = "curso-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.59.0",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "whoosh>=2.7.4",
]
